[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Dev with cargo run --features bevy/dynamic

# Check these out
# bevy_mod_debugdump 
# bevycheck

[dependencies]
heron = { version = "0.11.1", features = ["2d"] }
rand = "*"
gilrs = "0.8.1"
log = "0.4"

[dependencies.bevy-inspector-egui]
version = "0.5"

[dependencies.bevy]
version = "0.5"
default-features = false
features = [
  "bevy_dynamic_plugin",
  "render",
  "bevy_wgpu",
  "bevy_winit",
  "png",
  "hdr",
  "x11",
  "wayland"
]
